--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 body,html {
     width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
@@ -39,7 +43,7 @@ body {
 .description {
     font-size: 14px;
     font-weight: 400;
-    margin: 0 0 16px 0;
+    margin: 0 0 26px 0;
 }
 
 ul {
@@ -65,4 +69,15 @@ li {
 
 li:last-child {
     margin-bottom: 0px;
+}
+
+li:hover {
+    background-color: #C4F82A;
+    color: #111111;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
