--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,13 @@ body {
 .container {
     background-color: #1F1F1F;
     box-sizing: border-box;
-    padding: 40px;
+    padding: calc(24px + 0.8vw);
     border-radius: 14px;
-    max-width: 380px;
+    width: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 12px 0 12px;
 }
 
 .img-1 {
@@ -54,7 +55,8 @@ ul {
     padding-inline-start: 0;
     text-align: center;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
 }
 
 li {
