--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
 .name {
     font-size: 24px;
     font-weight: 600;
-    margin: 0 0 16px 0;
+    margin: 0 0 10px 0;
 }
 
 .location {
@@ -46,6 +46,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     margin: 0 0 26px 0;
+    text-align: center;
 }
 
 ul {
@@ -64,7 +65,7 @@ li {
     font-weight: 700;
     font-size: 14px;
     background-color: #333333;
-    padding: 16px 0 16px 0;
+    padding: 14px 0 14px 0;
     box-sizing: border-box;
     margin-bottom: 16px;
     width: 100%;
